# Indoor-Positioning-And-Navigation-Algorithms

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Description of the system.md  Doxyfile  Doxyfile-sttl  LICENSE  PEDOMETER_README.md  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
demo apps/Android/: AndroidManifest.xml  ant.properties  build.sh  build.xml  install.sh  local.properties
demo apps/ios/NavigineDemo/: KeysAndPathsConstants.h  Main.storyboard  NavMacros.h  NavigineDemo-Info.plist  NavigineDemo-Prefix.pch  NavigineDemoAppDelegate.h  NavigineDemoAppDelegate.m  NavigineDemoViewController.h  NavigineDemoViewController.m  main.m
demo apps/ios/NavigineDemoTests/: NavigineDemoTests-Info.plist  NavigineDemoTests.m
demo apps/ios/NavigineManager/: NavigineManager.h  NavigineManager.m
demo apps/ios/Navigine_Demo.xcodeproj/: project.pbxproj
demo apps/ios/SDK/: Location.h  NavigineSDK.h  Sublocation.h  Vertex.h
include/: README.md  barriers_geometry_builder.h  boost_geometry_adaptation.h  geolevel.h  level.h  level_collector.h  level_geometry.h  location_point.h  navigation_input.h  navigation_output.h  navigation_settings.h  point.h  transmitter.h  vector3d.h  xy_particle.h
include/navigine/navigation-core/: CHANGELOG.md  README.md  barriers_geometry_builder.h  boost_geometry_adaptation.h  geolevel.h  graph.h  graph_particle.h  level.h  level_collector.h  level_geometry.h  location_point.h  logger.h  motion_info.h  navigation_client.h  navigation_output.h  navigation_settings.h  navigation_state.h  radiomap.h  reference_point.h  transmitter.h  vector3d.h  version.h  xy_particle.h
navigation/: Navigation_tests.sln  System descritpion.md
navigation-core/: BUILD.gn  CMakeLists.txt  README.md
navigation-core/include/: barriers_geometry_builder.h  declare_identifier.h  geolevel.h  level.h  level_collector.h  level_geometry.h  location_point.h  navigation_client.h  navigation_input.h  point.h  vector3d.h  xy_particle.h
navigation-core/src/: barriers_geometry_builder.cpp  geometry.h  level.cpp  level_collector.cpp  measurement_types.h  navigation_error_codes.h  point.cpp  position.h  vector3d.cpp
navigation-core/src/level_estimator/: barometer.h  level_estimator.cpp  level_estimator.h  level_estimator_transmitters.cpp  level_estimator_transmitters.h  level_history.cpp  level_history.h
navigation-core/src/measurements/: measurement_preprocessor.cpp
navigation-core/src/position_estimator/: position_estimator_zone.cpp  position_estimator_zone.h
navigation-core/tests/: BUILD.gn  navigation_test  navigation_test.cpp
navigation-core/tools/verification/: helpers.cpp
navigation/complementary_filter/: Makefile
navigation/complementary_filter/examples/: main.cpp
navigation/complementary_filter/helpers/: plot_angles.py
navigation/complementary_filter/src/: complementary_filter.cpp  quaternion.cpp
navigation/pedometer/: Makefile
navigation/pedometer/examples/: main.cpp
navigation/pedometer/include/: vector3d.h
navigation/pedometer/proj/: test_pedometer.vcxproj  test_pedometer.vcxproj.filters
navigation_SDK/Navigine_iOS_SDK/: Category.h  Venue.h
src/: README  barriers_geometry_builder.cpp  device_properties.h  geometry.cpp  geometry.h  level.cpp  level_collector.cpp  level_geometry.cpp  measurement_types.h  navigation_client_impl.cpp  navigation_client_impl.h  navigation_error_codes.h  point.cpp  position.h  radiomap.cpp  triangulation.cpp  triangulation.h  trilateration.cpp  trilateration.h  vector3d.cpp
src/knn/: knn_utils.cpp  knn_utils.h
src/level_estimator/: barometer.cpp  barometer.h  level_estimator.cpp  level_estimator.h  level_estimator_radiomap.cpp  level_estimator_radiomap.h  level_estimator_transmitters.cpp  level_estimator_transmitters.h  level_history.h
src/likelihood/: likelihood.cpp  likelihood.h  likelihood_radiomap.cpp  likelihood_radiomap.h
src/measurements/: measurement_preprocessor.cpp  measurement_preprocessor.h
src/position_estimator/: position_estimator.h  position_estimator_knn.cpp  position_estimator_knn.h  position_estimator_outdoor.cpp  position_estimator_outdoor.h  position_estimator_zone.cpp  position_estimator_zone.h
src/position_estimator/docs/: KNN.md
src/position_postprocessor/: navigation_time_smoother.cpp  navigation_time_smoother.h  polynomial_fit.cpp  polynomial_fit.h  position_postprocessor.cpp  position_postprocessor.h  position_smoother.h  position_smoother_ab.cpp  position_smoother_ab.h  position_smoother_lstsq.cpp  position_smoother_lstsq.h
src/sensor_fusion/: complementary_filter.cpp  complementary_filter.h  pedometer.cpp  pedometer.h  quaternion.cpp  quaternion.h  sensor_fusion.cpp  sensor_fusion.h
standalone_algoritgms/: README.md
standalone_algoritgms/complementary_filter/: README.md
standalone_algoritgms/pedometer/: Makefile
standalone_algoritgms/position_estimation/: Makefile
standalone_algoritgms/trilateteration/: README.md
standalone_algorithms/: System description.md
standalone_algorithms/complementary_filter/: CMakeLists.txt  README.md
standalone_algorithms/complementary_filter/examples/: main.cpp
standalone_algorithms/complementary_filter/helpers/: plot_angles.py
standalone_algorithms/complementary_filter/include/: complementary_filter.h
standalone_algorithms/complementary_filter/src/: complementary_filter.cpp
standalone_algorithms/pedometer/: CMakeLists.txt  README.md
standalone_algorithms/position_estimation/: CMakeLists.txt  README.md
standalone_algorithms/position_estimation/examples/: main.cpp
standalone_algorithms/position_estimation/helpers/: plot_positions.py
standalone_algorithms/position_estimation/include/: navigation_structures.h
standalone_algorithms/position_estimation/src/: nearest_transmitter_estimator.cpp  position_smoother.cpp
standalone_algorithms/trilateteration/: CMakeLists.txt  README.md
standalone_algorithms/trilateteration/src/: test_trilateration.cpp  test_trilateration.h  trilateration.cpp  trilateration.h
tests/: navigation_test.cpp
tools/verification/: helpers.cpp  helpers.h
(+143 files in other folders)
