import("//build/config/compile_package.gni")

compile_package("navigation-core") {
  # - List of public headers
  # public_include_files = []

  # Private API and sources.
  sources = [
      "src/geometry.cpp",
      "src/measurements/measurement_preprocessor.cpp",
      "src/position_estimator/position_estimator_zone.cpp",
      "src/level_estimator/barometer.cpp",
      "src/level_estimator/level_estimator.cpp",
      "src/level_estimator/level_estimator_transmitters.cpp",
      "src/level_estimator/level_history.cpp",
      "src/navigation_client_impl.cpp",
      "src/barriers_geometry_builder.cpp",
      "src/level.cpp",
      "src/point.cpp",
      "src/level_collector.cpp",
      "src/level_geometry.cpp",
      "src/vector3d.cpp",
      "tools/verification/helpers.cpp",
  ]

  version = "1.0.2"
}
